--- a/style.css
+++ b/style.css
@@ -43,8 +43,6 @@ input[type=button] {
     border-radius:2em;
     box-sizing: border-box;
     text-decoration:none;
-    font-family:'Roboto',sans-serif;
-    font-weight:300;
     color:#FFFFFF;
     text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
     text-align:center;
@@ -67,16 +65,14 @@ label {
     padding:0.3em 1.2em;
     margin:0 0.1em 0.1em 0;
     border:0.1em solid rgba(255,255,255,0);
-    border-radius:2em;
+    border-radius:5px;
     box-sizing: border-box;
     text-decoration:none;
-    font-family:'Roboto',sans-serif;
-    font-weight:300;
     color:#FFFFFF;
     text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
     text-align:center;
     transition: all 0.2s;
-    background-color:#37a037
+    background-color:#37a037;
 }
 
 #book-button:hover {
@@ -125,7 +121,7 @@ label {
 }
 
 .card-button {
-    background-color: #3a32a3;
+    background-color: #37a037;
     margin: 0px 10px 10px 10px;
     border: none;
     color: rgb(228, 215, 215);
@@ -151,4 +147,5 @@ label {
     border:rgb(134, 134, 134) solid 2px;
     border-radius: 5px;
     background-color: #2e3133;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
